# PretextView

./: .gitmodules  AGPCorrect  ColorMapData.cpp  LICENCE.txt  PretextView.cpp  PretextView.rc  README.md  Resources.cpp  Resources_linux.S  Resources_mac.S  TextureLoadQueue.cpp  glad.c  icon.icns  install  install.bat  make_macos_app_plist.sh  meson.build  setup.sh
.github/workflows/: test.yml
include/: Header.h  gl3corefontstash.h  nuklear.h
include/glad/: glad.h
